latex2mmlc/src/snapshots/latex2mmlc__tests__d_command_nested.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathit{x\\d x}"
---
<math>
    <mrow>
        <mi>𝑥</mi>
        <mi mathvariant="normal">d</mi>
        <mi>𝑥</mi>
    </mrow>
</math>
