latex2mmlc/src/snapshots/latex2mmlc__tests__double_prime.snap
---
source: latex2mmlc/src/lib.rs
expression: "f''"
---
<math>
    <msup>
        <mi>f</mi>
        <mo>″</mo>
    </msup>
</math>
