latex2mmlc/src/snapshots/latex2mmlc__tests__double_prime_and_sub_super.snap
---
source: latex2mmlc/src/lib.rs
expression: "f''_3^2"
---
<math>
    <msubsup>
        <mi>f</mi>
        <mn>3</mn>
        <mrow>
            <mo>″</mo>
            <mn>2</mn>
        </mrow>
    </msubsup>
</math>
