latex2mmlc/src/snapshots/latex2mmlc__tests__double_prime_and_super.snap
---
source: latex2mmlc/src/lib.rs
expression: "f''^2"
---
<math>
    <msup>
        <mi>f</mi>
        <mrow>
            <mo>″</mo>
            <mn>2</mn>
        </mrow>
    </msup>
</math>
