latex2mmlc/src/snapshots/latex2mmlc__tests__double_sub.snap
---
source: latex2mmlc/src/lib.rs
expression: x__3
---
CannotBeUsedHere {
    got: TokLoc(
        2,
        Underscore,
    ),
    correct_place: AfterOpOrIdent,
}
