latex2mmlc/src/snapshots/latex2mmlc__tests__double_subscript.snap
---
source: latex2mmlc/src/lib.rs
expression: "g_{\\mu\\nu}"
---
<math>
    <msub>
        <mi>g</mi>
        <mrow>
            <mi>μ</mi>
            <mi>ν</mi>
        </mrow>
    </msub>
</math>
