latex2mmlc/src/snapshots/latex2mmlc__tests__end_without_open.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\end{matrix}"
---
UnexpectedClose(
    TokLoc(
        0,
        End,
    ),
)
