latex2mmlc/src/snapshots/latex2mmlc__tests__fraction_with_space.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\frac 12"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
