latex2mmlc/src/snapshots/latex2mmlc__tests__fraction_without_space.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\frac12"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
