latex2mmlc/src/snapshots/latex2mmlc__tests__genfrac_0.4pt.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\genfrac(]{0.4pt}{2}{a+b}{c+d}"
---
<math>
    <mrow displaystyle="false" scriptlevel="1">
        <mo>(</mo>
        <mfrac linethickness="0.4pt">
            <mrow>
                <mi>a</mi>
                <mo>+</mo>
                <mi>b</mi>
            </mrow>
            <mrow>
                <mi>c</mi>
                <mo>+</mo>
                <mi>d</mi>
            </mrow>
        </mfrac>
        <mo>]</mo>
    </mrow>
</math>
